# tezos-melange-app

./: .gitignore  dune  index.html  package-lock.json  package.json  vite.config.mjs
src/: App.re  CenterBox.re  Context.re  Header.re  Island.re  ReactApp.module.css  ReactApp.re  Taquito.re  Utils.re  WalletButton.re  index.css
src/bindings/: BeaconWallet.re  BigNumber.re  Taquito.re  Uusd.re
src/styles/: CenterBox.module.css  Header.module.css  Island.module.css  WalletButton.module.css
src/world/: dune
